// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticleTextToggleButton texts renders correctly 1`] = `
<div>
  <button
    class="button"
  >
    Show less
  </button>
</div>
`;

exports[`ArticleTextToggleButton texts renders correctly after button is clicked 1`] = `
<div>
  <button
    class="button"
  >
    Show more
  </button>
</div>
`;
